

ColdSync 3.0
============

	There are a lot of new features in the 3.0 release of ColdSync.

	- Working Network Hotsync, both in inetd and standalone mode.
	- Improved USB support (libusb).
	- Named listen blocks. You can use the --listen <blockname> option to select the
	  one you like.
	- Autoinitialization of serial-number-retrievable devices in daemon mode.
	- Faster download of the databases list with recent PalmOS devices
	  (DLP >= 1.2).
	- "type: none;" conduits, to allow conduits to run without an
	  associated database.
	- "enabled: yes|no;" to allow administrator to keep around conduit
	  blocks that aren't actually in use.
	- Improved error detection and reporting.
	- Improved syntax:
		'coldsync -m install' to quickly install new files.
		'coldsync -m fetch' to download one from your PDA.
		'coldsync -m list' to list your files.
	- N-palms -> single-unix-user mapping in daemon mode.
	- Linux capabilities support (libcap).
	- Configuration files moved to <prefix>/etc/coldsync/* .
	- More sample conduits
	- VFS and ExpSlot support in the perl modules
	- many more DLP calls for perl sync conduits