@@ -6,7 +6,8 @@ ColdSync 3.0
 	There are a lot of new features in the 3.0 release of ColdSync.
 
 	- Working Network Hotsync, both in inetd and standalone mode.
-	- Improved USB support (libusb).
+	- Improved USB support (libusb), which is now the default if no
+	  device is specified on the command line.
 	- Named listen blocks. You can use the --listen <blockname> option to select the
 	  one you like.
 	- Autoinitialization of serial-number-retrievable devices in daemon mode.
@@ -21,6 +22,7 @@ ColdSync 3.0
 		'coldsync -m install' to quickly install new files.
 		'coldsync -m fetch' to download one from your PDA.
 		'coldsync -m list' to list your files.
+		'coldsync -m info' to fetch basic info
 	- N-palms -> single-unix-user mapping in daemon mode.
 	- Linux capabilities support (libcap).
 	- Configuration files moved to <prefix>/etc/coldsync/* .
